# aipolitician

./: .env.example  .gitignore  .gitignore.bak  .pre-commit-config.yaml  DATABASE_SETUP.md  Dockerfile  LICENSE  README.md  agents.py  aipolitician.py  alembic.ini  api.py  app.py  biden_chat.py  biden_chat_test.py  chat.py  chat_biden.py  chat_trump.py  check_pipeline.py  check_system.py  cli.py  docker-compose.yml  download_llama.py  download_model.py  fact-checker-env-setup.md  fact-checker-setup.md  gpu_requirements.txt  langgraph.json  langgraph_politician.py  list_politicians.py  main.py  models.py  political_chat.py  political_debate_dfd  pyproject.toml  query_db.py  rag.py  repomix-output.txt  requirements-browser-fact-checker.txt  requirements-chat.txt  (+15 more)
.github/workflows/: codeql.yml
Agents/ContextAgent/: agent.py
Agents/ContextRoutingAgent/: agent.py
Agents/DeflectionAgent/: agent.py
Agents/FactCheckingAgent/: agent.py
Agents/SentimentAgent/: agent.py
Agents/ToneAgent/: agent.py
Agents/WorkflowManager/: agent.py
Databases/: init_db.py
Diagrams/: diagrams.py
Diagrams/Output/: political_debate_swarm_architecture
ai_politician_tests/ai_politician_tests/tests/: test_docker_build.py
ai_politician_tests/tests/: test_docker_build.py  test_docker_setup.py
app/: __init__.py  main.py  server.py  sessions.py
app/agents/: __init__.py  base.py  biden.py  trump.py
app/models/: __init__.py  chat.py  config.py  secure_config.py
app/routers/: __init__.py  chat.py
app/utils/: __init__.py  exceptions.py  model_manager.py  rate_limiter.py  session_manager.py
db/: README.md  __init__.py  config.py  database.py
db/milvus/: README.md
db/milvus/scripts/: search.py  verify_collection.py
db/milvus/test/: insert_sample.py  test_search.py
db/schemas/: __init__.py  biography_db.py  policy_db.py  speech_db.py  voting_record_db.py
db/scripts/: initialize_databases.py
db/utils/: __init__.py  api_utils.py  embedding_utils.py  rag_utils.py  scraping_utils.py
docs/: OPEN_SOURCE_MODELS.md  README.md  chat.md  chat_system.md  database_system.md  debate.md  installation.md  langgraph_workflow.md  model_training.md  pipeline_system.md  query_database.py  rag.md  rag_system.md  scraper_system.md  system_overview.md  usage_guide.md
docs/data/chroma/: chroma_database_guide.md  chroma_database_usage.md  chroma_quick_reference.md  chroma_schema_reference.md  setup_instructions.md
docs/data/pipeline/: pipeline_system.md
docs/data/scraper/: scraper_system.md
lang-graph/: CLAUDE.md  Dockerfile  Makefile  README-DOCKER.md  README.md  diagram.md  docker-compose.yml  langgraph.json  pyproject.toml  repomix-output.txt  requirements.txt  run.sh  setup_models.sh
lang-graph/improvement_plan/: README.md
lang-graph/models/: config.json
lang-graph/src/: main.py
lang-graph/src/political_agent_graph/: __init__.py  config.py  graph.py  local_models.py  mock_db.py  persona_manager.py  persona_models.py  personas.json  prompts.py  repomix-output.txt  state.py
lang-graph/src/shared/: __init__.py  config.py  (+1 more)
langgraph_studio/: __init__.py  app.py  setup.py
migrations/: env.py
monitoring/: alerts.yml  prometheus.yml
pipeline/: pipeline.py
repomix/: repomix-output.txt  requirements-chat.txt
requirements/: requirements-all.txt  requirements-base.txt  requirements-chat.txt  requirements-debate.txt  requirements-langgraph.txt  requirements-scraper.txt
scraper/: README.md  __init__.py  batch_scrape.py  minimal_test.py  politician_scraper.py  requirements.txt  test_politician_scraper.py  test_scraper.py
scripts/: chat_politician.py  cleanup.sh  cleanup_gpu.sh  collect_data.py  collect_politician_data.py  debug_politician.py  init_database.sh  init_genv.sh  load_milvus_data.py  manage_db.py  run_on_gpu.sh  setup_models.py  test_api.sh  test_debate_simple.py  trace_politician.py  update_database.sh
scripts/backup/: run_debate.py  test_debate.py
scripts/chat/: chat_politician.py  debug_politician.py  trace_politician.py
scripts/database/: load_milvus_data.py  manage_db.py
scripts/debate/: debate_politician.py  debug_debate.py  test_debate_simple.py
src/: __init__.py  config.py  langraph_studio.py  run_langgraph_studio.py
src/agents/: __init__.py  base.py  context_agent.py  dialogue_generation_agent.py  response_agent.py  sentiment_agent.py  workflow_manager.py
src/aipolitician/: server.py
src/api/: __init__.py  routes.py
src/config/: __init__.py  cache_config.py  env_utils.py
src/data/: __init__.py
src/database/: __init__.py  models.py
src/models/: graph_integration.py
src/political_agent_graph/: __init__.py  config.py  graph.py  local_models.py  prompts.py
src/scripts/: launch_studio.py  run_langgraph_studio.py
src/utils/: __init__.py  cache.py  helpers.py  metrics.py
test/: test_db.py  test_scraper.py
tests/: __init__.py  test_agents.py  test_biden_model.py  test_db.py  test_political_agents.py  test_trump_model.py
training/: inference.py  train_mistral_biden.py  train_mistral_trump.py
(+73 files in other folders)
